tests/fixtures/invalid/integer-invalid-octal-char.stderr
TOML parse error at line 1, column 11
  |
1 | bad = 0o758
  |           ^
Unexpected `8`
Expected `#`
